Move to using Undertow for HTTP. Websockets NOT wired up.